[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scenes/Player/Melee_Attack.gd" type="Script" id=1]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.66008
height = 25.0237

[sub_resource type="Animation" id=2]
resource_name = "Hitbox_Down"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Area2D/MeleeHitbox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Area2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Hitbox_Left"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Area2D/MeleeHitbox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Area2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Hitbox_Up"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Area2D/MeleeHitbox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Area2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 180.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Hitbox_right"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Area2D/MeleeHitbox:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Area2D:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 270.0 ]
}

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "Hitbox_Left"

[sub_resource type="AnimationNodeAnimation" id=7]
animation = "Hitbox_Down"

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "Hitbox_right"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Hitbox_Up"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Hitbox_Left"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "Hitbox_Left"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "Hitbox_right"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Hitbox_right"

[sub_resource type="AnimationNodeBlendSpace2D" id=14]
blend_point_0/node = SubResource( 6 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 7 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 8 )
blend_point_2/pos = Vector2( 1, 0 )
blend_point_3/node = SubResource( 9 )
blend_point_3/pos = Vector2( 0, -1 )
blend_point_4/node = SubResource( 10 )
blend_point_4/pos = Vector2( -0.8, -0.6 )
blend_point_5/node = SubResource( 11 )
blend_point_5/pos = Vector2( -0.8, 0.6 )
blend_point_6/node = SubResource( 12 )
blend_point_6/pos = Vector2( 0.8, 0.6 )
blend_point_7/node = SubResource( 13 )
blend_point_7/pos = Vector2( 0.8, -0.6 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachine" id=15]
states/Hitbox_Rotation/node = SubResource( 14 )
states/Hitbox_Rotation/position = Vector2( 631, 80 )
start_node = "Hitbox_Rotation"

[sub_resource type="AnimationNodeStateMachinePlayback" id=16]

[node name="Melee_Attack" type="Node2D"]
script = ExtResource( 1 )

[node name="Pivot" type="Position2D" parent="."]

[node name="Area2D" type="Area2D" parent="Pivot"]

[node name="MeleeHitbox" type="CollisionShape2D" parent="Pivot/Area2D"]
position = Vector2( 0, 13 )
rotation = 1.5708
shape = SubResource( 1 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hitbox_Down = SubResource( 2 )
anims/Hitbox_Left = SubResource( 3 )
anims/Hitbox_Up = SubResource( 4 )
anims/Hitbox_right = SubResource( 5 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 15 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 16 )
parameters/Hitbox_Rotation/blend_position = Vector2( -0.0041365, 0.536723 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true

[connection signal="body_entered" from="Pivot/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
